# technical-interview-python

./: .gitignore  FUTURE.md  README.md
analysis/: analysis.py
asyncio/: README.md
asyncio/independence/: 1_requests.py  2_hashlib.py  3_sync_primitives.py
asyncio/interactiveness/: 1_requests.py
cases/: analytics.md  draft_analytics.md  health_app.md  infra.md  iot.md
code_reading/: level_1.py  level_2.py  level_3.py
code_reading/python/: level_4.py
code_review_projects/fastapi_backend/handler/: __init__.py  campaign.py
code_review_projects/fastapi_backend/models/: __init__.py  campaign.py  functions.py  miscellaneous.py  report.py  views.py
code_review_projects/fastapi_backend/repository/: __init__.py  campaign.py  composite.py  db.py  exceptions.py  report.py
code_review_projects/fastapi_backend/schema/: __init__.py  campaign.py  pagination.py  report.py
code_review_projects/fastapi_backend/utils/: auth.py  cache.py  campaign.py  exceptions.py  http_session.py  stream.py
code_review_projects/kontora_fastapi/: Dockerfile  docker-compose.yml  pyproject.toml  todos.txt
coding/: context_manager.py  decorator_task.py
junior_test/: README.md
junior_test/api_server/: ASSESSMENT.md  README.md
kontora/billing/: admin.py  models.py  tasks.py  urls.py  views.py
kontora/billing/migrations/: 0001_initial.py  0002_alter_debt_contract_alter_debt_customer.py
kontora/config/: asgi.py  settings.py  urls.py  wsgi.py
kontora/contracts/: admin.py  models.py
kontora/contracts/migrations/: 0001_initial.py  (+1 more)
kontora/customers/: admin.py  models.py
(+2 files in other folders)
